# microDB

./: .gitignore  CMakeLists.txt  README.md
include/: mdb.h
src/: db_datatypes.c  db_datatypes.h  main.c  microdb_db_datatypes.c  microdb_db_datatypes.h
src/cli/: CMakeLists.txt
src/core/: CMakeLists.txt  mdb_config.c  mdb_config.h  mdb_core.c  mdb_core.h  mdb_data_types.c  mdb_data_types.h  mdb_db_datatypes.c  mdb_db_datatypes.h  mdb_pager.h
src/indexing/: CMakeLists.txt
src/parser/: CMakeLists.txt
tests/: CMakeLists.txt
